--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -114,7 +114,7 @@ workflows:
             <<: *branch_only_filter
       - node/run:
           name: lint
-          npm-run: eslint
+          npm-run: lint
           filters:
             <<: *branch_only_filter
       - docker/publish:
