--- a/.babelrc
+++ b/.babelrc
@@ -1,15 +1,9 @@
 {
-  "presets": [
-    "@babel/preset-env"
-  ],
-  "plugins": [
-    "@babel/plugin-proposal-optional-chaining"
-  ],
+  "presets": ["@babel/preset-env"],
+  "plugins": ["@babel/plugin-proposal-optional-chaining"],
   "env": {
     "test": {
-      "plugins": [
-        "@babel/plugin-transform-runtime"
-      ]
+      "plugins": ["@babel/plugin-transform-runtime"]
     }
   }
 }
