--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,31 +10,13 @@
     "ecmaVersion": 2019,
     "sourceType": "module"
   },
-  "plugins": [
-    "jest"
-  ],
+  "plugins": ["jest"],
   "rules": {
-    "indent": [
-      "error",
-      2,
-      { "SwitchCase": 1 }
-    ],
-    "linebreak-style": [
-      "error",
-      "unix"
-    ],
-    "quotes": [
-      "error",
-      "single"
-    ],
-    "semi": [
-      "error",
-      "never"
-    ],
+    "indent": ["error", 2, { "SwitchCase": 1 }],
+    "linebreak-style": ["error", "unix"],
+    "quotes": ["error", "single"],
+    "semi": ["error", "never"],
     "no-console": "off",
-    "no-unused-vars": [
-      "error",
-      { "argsIgnorePattern": "^_" }
-    ]
+    "no-unused-vars": ["error", { "argsIgnorePattern": "^_" }]
   }
 }
