--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "integration": "ALLOW_CONFIG_MUTATIONS=true jest --colors --testRegex=\\.integration\\.js$",
     "eslint": "eslint --color -c .eslintrc.yml --ext js .",
     "eslint-fix": "eslint --color -c .eslintrc.yml --ext js --fix .",
+    "pretty": "prettier --check .",
+    "pretty-fix": "prettier --write .",
+    "fix": "npm run pretty-fix && npm run eslint-fix",
+    "lint": "npm run pretty && npm run eslint",
     "start": "npx babel-node runner.js",
     "test": "ALLOW_CONFIG_MUTATIONS=true jest --colors --runInBand"
   },
@@ -45,12 +49,14 @@
     "babel-eslint": "^10.1.0",
     "babel-jest": "^27.2.0",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jest": "^24.4.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-utils": "^3.0.0",
     "jest": "^27.2.0",
     "jest-mock-console": "^1.1.0",
     "minimist": "^1.2.5",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "prettier": "2.4.0"
   }
 }
